@startuml engine-candidate-query-flow
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0
skinparam defaultFontSize 11

title Candidate & Dict Query Flow

legend right
  |= Color |= Description |
  | <#FFE0B2> | Public interface |
  | <#FFF3E0> | Internal implementation |
  | <#C8E6C9> | Data models |
  | <#BBDEFB> | Room database layer |
endlegend

' ===== Public Interface =====
package "Public Interface" #FFE0B2 {
  interface ImeDictProvider <<(I,#FFE0B2)>> {
    + query(pinyin): List<Candidate>
    + queryPrefix(prefix): List<Candidate>
    + recordInput(pinyin, word)
  }
}

' ===== Internal Implementation =====
package "Internal Implementation" #FFF3E0 {
  class ImeSqliteDictProvider <<(C,#FFF3E0)>> {
    - dictRepository: DictRepository
    - pinyinCharsTree: PinyinCharsTree
    - hmmModel: HmmModel
    + query(pinyin): List<Candidate>
    + queryPrefix(prefix): List<Candidate>
    + recordInput(pinyin, word)
  }

  class DictRepository <<(C,#FFF3E0)>> {
    - wordDao: PinyinWordDao
    - phraseDao: PinyinPhraseDao
    - userInputDao: UserInputDao
    - favoriteDao: FavoriteDao
    - hmmDao: HmmDao
    + lookupPinyinWords(spell): List<InputWord.Pinyin>
    + lookupPinyinPhrases(spells): List<InputWord.PinyinPhrase>
    + predictPhrase(currentSpell, context): List<InputWord.PinyinPhrase>
    + getLatinCompletions(prefix): List<InputCompletion.LatinWord>
    + recordUserInput(text, type)
    + observeFavorites(): Flow<List<InputFavorite>>
  }
}

' ===== Data Models =====
package "Data Models" #C8E6C9 {
  class PinyinCharsTree <<(D,#C8E6C9)>> {
    + children: Map<Char, PinyinCharsTree>
    + keys: List<InputKey.Char>
    + find(prefix): PinyinCharsTree?
    + allReachableChars(): Set<Char>
  }

  class HmmModel <<(D,#C8E6C9)>> {
    + states: Set<HmmState>
    + observations: Set<HmmObservation>
    + initialProb: Map<HmmState, Double>
    + transitionProb: Map<HmmState, Map<HmmState, Double>>
    + emissionProb: Map<HmmState, Map<HmmObservation, Double>>
  }

  class ViterbiDecoder <<(C,#C8E6C9)>> {
    - model: HmmModel
    + decode(observations): List<HmmState>
  }

  class HmmState <<(V,#C8E6C9)>> {
    + value: String
  }
  class HmmObservation <<(V,#C8E6C9)>> {
    + value: String
  }
}

' ===== Room Database Layer =====
package "Room Database Layer" #BBDEFB {
  class DictDatabase <<(C,#BBDEFB)>> {
    + pinyinWordDao(): PinyinWordDao
    + pinyinPhraseDao(): PinyinPhraseDao
    + userInputDao(): UserInputDao
    + favoriteDao(): FavoriteDao
    + hmmDao(): HmmDao
  }

  interface PinyinWordDao <<(I,#BBDEFB)>> {
    + lookupBySpell(spell): List<PinyinWordEntity>
    + lookupByPrefix(prefix, limit): List<PinyinWordEntity>
    + lookupSpellsByPrefix(prefix): List<String>
    + lookupVariants(spell): List<PinyinWordEntity>
  }

  interface PinyinPhraseDao <<(I,#BBDEFB)>> {
    + lookupBySpellPrefix(spellPrefix, limit): List<PinyinPhraseEntity>
    + lookupBySpells(spells): List<PinyinPhraseEntity>
  }

  interface UserInputDao <<(I,#BBDEFB)>> {
    + getTopByType(type, limit): List<UserInputEntity>
    + getCompletions(prefix, type, limit): List<UserInputEntity>
    + upsert(entity)
    + incrementFrequency(text, type, timestamp)
  }

  interface FavoriteDao <<(I,#BBDEFB)>> {
    + getAllFlow(): Flow<List<FavoriteEntity>>
    + getAll(): List<FavoriteEntity>
    + upsert(entity)
    + delete(text)
  }

  interface HmmDao <<(I,#BBDEFB)>> {
    + predictNextStates(spell): List<String>
  }

  class PinyinWordEntity <<(D,#BBDEFB)>> {
    + id: Long
    + spell: String
    + text: String
    + freq: Int
    + variant: String?
    + tone: Int?
  }
  class PinyinPhraseEntity <<(D,#BBDEFB)>> {
    + id: Long
    + spells: String
    + text: String
    + freq: Int
  }
  class UserInputEntity <<(D,#BBDEFB)>> {
    + id: Long
    + text: String
    + type: String
    + freq: Int
    + lastUsed: Long
  }
  class FavoriteEntity <<(D,#BBDEFB)>> {
    + id: Long
    + text: String
    + type: String?
    + usageCount: Int
    + createdAt: Long
  }
  class HmmTransitionEntity <<(D,#BBDEFB)>> {
    + id: Long
    + fromState: String
    + toState: String
    + probability: Double
  }
}

' ===== Relationships =====
ImeDictProvider <|.. ImeSqliteDictProvider : internal implementation
ImeSqliteDictProvider *-- DictRepository : delegates
ImeSqliteDictProvider *-- PinyinCharsTree : composition
ImeSqliteDictProvider *-- HmmModel : composition

DictRepository --> PinyinWordDao : uses
DictRepository --> PinyinPhraseDao : uses
DictRepository --> UserInputDao : uses
DictRepository --> FavoriteDao : uses
DictRepository --> HmmDao : uses
DictRepository --> ViterbiDecoder : uses

HmmModel --> HmmState : uses
HmmModel --> HmmObservation : uses
ViterbiDecoder --> HmmModel : uses

DictDatabase --> PinyinWordDao : provides
DictDatabase --> PinyinPhraseDao : provides
DictDatabase --> UserInputDao : provides
DictDatabase --> FavoriteDao : provides
DictDatabase --> HmmDao : provides

' ===== Query Flow =====
note right of ImeSqliteDictProvider
  **Query Flow**
  1. PinyinCharsTree prefix matching for candidates
  2. HmmModel transition probability ranking
  3. ViterbiDecoder optimal path decoding
  4. Merge user word frequency and favorite weights
end note

note bottom of DictDatabase
  **Prebuilt Dictionaries (assets/dict/)**
  pinyin_word_dict.db ← Pinyin word library
  pinyin_phrase_dict.db ← Pinyin phrase library
  hmm_data.db ← HMM data
  Initialized via Room createFromAsset()
end note

@enduml
